@@ -1,5 +1,5 @@
 #ifndef __build_h
 #define __build_h
-#define NETXMS_VERSION_BUILD 7851
-#define NETXMS_VERSION_BUILD_STRING _T("7851")
+#define NETXMS_VERSION_BUILD 7852
+#define NETXMS_VERSION_BUILD_STRING _T("7852")
 #endif
