@@ -1,5 +1,5 @@
 package org.netxms.base;
 public final class BuildNumber {
-   public static final String TEXT = "7851";
-   public static final int NUMBER = 7851;
+   public static final String TEXT = "7852";
+   public static final int NUMBER = 7852;
 }
