@@ -30,7 +30,7 @@ static void (* s_fpWriteLog)(int, int, const TCHAR *) = NULL;
 static void (* s_fpSendTrap1)(UINT32, const TCHAR *, const char *, va_list) = NULL;
 static void (* s_fpSendTrap2)(UINT32, const TCHAR *, int, TCHAR **) = NULL;
 static bool (* s_fpSendFile)(void *, UINT32, const TCHAR *, long) = NULL;
-static bool (* s_fpPushData)(const TCHAR *, const TCHAR *) = NULL;
+static bool (* s_fpPushData)(const TCHAR *, const TCHAR *, UINT32) = NULL;
 
 /**
  * Initialize subagent API
@@ -39,7 +39,7 @@ void LIBNETXMS_EXPORTABLE InitSubAgentAPI(void (* writeLog)(int, int, const TCHA
 														void (* sendTrap1)(UINT32, const TCHAR *, const char *, va_list),
 														void (* sendTrap2)(UINT32, const TCHAR *, int, TCHAR **),
 														bool (* sendFile)(void *, UINT32, const TCHAR *, long),
-														bool (* pushData)(const TCHAR *, const TCHAR *))
+														bool (* pushData)(const TCHAR *, const TCHAR *, UINT32))
 {
    s_fpWriteLog = writeLog;
 	s_fpSendTrap1 = sendTrap1;
@@ -250,10 +250,9 @@ BOOL LIBNETXMS_EXPORTABLE AgentGetParameterArgW(const TCHAR *param, int index, W
 #endif
 }
 
-//
-// Send file to server
-//
-
+/**
+ * Send file to server
+ */
 BOOL LIBNETXMS_EXPORTABLE AgentSendFileToServer(void *session, UINT32 requestId, const TCHAR *file, long offset)
 {
 	if ((s_fpSendFile == NULL) || (session == NULL) || (file == NULL))
@@ -261,16 +260,14 @@ BOOL LIBNETXMS_EXPORTABLE AgentSendFileToServer(void *session, UINT32 requestId,
 	return s_fpSendFile(session, requestId, file, offset);
 }
 
-
-//
-// Push parameter's value
-//
-
+/**
+ * Push parameter's value
+ */
 BOOL LIBNETXMS_EXPORTABLE AgentPushParameterData(const TCHAR *parameter, const TCHAR *value)
 {
 	if (s_fpPushData == NULL)
 		return FALSE;
-	return s_fpPushData(parameter, value);
+	return s_fpPushData(parameter, value, 0);
 }
 
 BOOL LIBNETXMS_EXPORTABLE AgentPushParameterDataInt32(const TCHAR *parameter, LONG value)
